# youtube_external_subtitle_browser

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  posthtml.config.js  tsconfig.json
backend/: README.md  base.py  pyproject.toml  stream_list.example.yaml
backend/static/subtitles/: README.md
backend/static/thumbnails/: README.md
src/: App.tsx  constants.ts  index.html
src/components/: AboutSite.tsx  AboutVersioning.tsx  Header.tsx  VideoList.tsx  VideoListItem.tsx
src/pages/: Home.tsx  VideoBrowser.tsx
